--- a/clients.properties
+++ b/clients.properties
@@ -1,4 +1,4 @@
-
+management.endpoints.web.exposure.include= "*"
 spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.service-name=${spring.application.name}
