--- a/clients.properties
+++ b/clients.properties
@@ -3,3 +3,7 @@ spring.cloud.consul.host=localhost
 spring.cloud.consul.port=8500
 spring.cloud.consul.discovery.service-name=${spring.application.name}
 name=lmr2
+spring.rabbitmq.host= 192.168.62.129
+spring.rabbitmq.port= 5672
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=admin
